# sesame

./: .gitignore  README.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-06-28-075637_create_category/: up.sql
backend/migrations/2024-07-16-090601_create_user/: down.sql  up.sql
backend/migrations/2024-07-16-095710_create_group/: up.sql
backend/migrations/2024-07-16-100135_create_place/: down.sql  up.sql
backend/migrations/2024-07-16-104006_create_water_closet/: down.sql  up.sql
backend/migrations/2024-07-16-110017_create_report/: down.sql  up.sql
backend/migrations/2024-07-16-131407_create_history/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/controllers/: auth_controller.rs  categories_controller.rs  group_controller.rs  history_controller.rs  mod.rs  place_controller.rs  report_controller.rs  user_controller.rs  water_closet_controller.rs  web_socket.rs
backend/src/helpers/: auth_helper.rs  mod.rs
backend/src/helpers/errors/: business_errors.rs  mod.rs  web_errors.rs
backend/src/models/: categories.rs  database.rs  group.rs  history.rs  mod.rs  place.rs  report.rs  user.rs  water_closet.rs
backend/src/services/: auth_service.rs  categories_service.rs  group_service.rs  history_service.rs  mod.rs  place_service.rs  report_service.rs  robot_simulator_services.rs  user_service.rs  water_closet_service.rs
backend/src/ws/: server.rs  session.rs
docker/: docker-compose.yml
frontend/: .gitignore  Dockerfile  README.md  angular.json  docker-compose.yml  package-lock.json  package.json  pubspec.yaml
(+82 files in other folders)
