[package]
name = "sesame"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15"
env_logger = "0.11.3"
r2d2 = "0.8"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
